2004/01/10 04:09 (-0500) muppetman

	* t/01.GtkWindow.t: correct the skip count for 2.0.x

	* t/GtkListStore.t: on RH8 with gtk+-2.0.6, i get a crash from pango
	xft when attempting to create the TreeView, complaining that there's
	no display.  later versions don't seem to require this; so, skip the
	remaining tests on 2.0.6 if gtk_init_check fails.

2004/01/10 07:15 (+0100) kaffeetisch

	* t/GtkItemFactory.t: Only test if the return value of
	get_widget_by_action is a Gtk2::Widget.

	* t/GdkWindow.t: Move the get_position call around a bit to make
	it pass.  Don't be too strict with get_toplevel.

2004/01/10 05:35 (+0100) kaffeetisch

	Merge from the test-suite-branch.

	* t/00.Gtk2.t: Test disable_setlocale, set_locale,
	get_default_language, main_iteration_do, key_snooper_install,
	key_snooper_remove, and quit_add_destroy.

	* t/01.GtkWindow.t: Test add_accel_group, remove_accel_group and
	Gtk2::WindowGroup::new, ::add_window, and ::remove_window.

	* MANIFEST
	R t/01.GtkWidget.t
	R t/02.GtkButton.t
	A t/02.GtkContainer.t
	R t/03.GtkGammaCurve.t
	R t/04.GtkSocket-GtkPlug.t
	R t/05.GtkListStore-etc.t
	R t/06.GtkLabel.t
	R t/07.GtkBoxes.t
	R t/08.GtkCombo.t
	R t/09.GtkRadioButton.t
	R t/10.GtkProgressBar.t
	R t/11.GtkStatusBar.t
	R t/12.GtkDialog.t
	R t/13.GtkTooltips.t
	R t/14.GtkToolbar.t
	R t/15.GtkHandleBox.t
	R t/16.GtkMenu-etc.t
	R t/17.GtkItemFactory.t
	R t/18.GtkNotebook.t
	R t/19.GtkSimpleList.t
	R t/20.GdkColor.t
	R t/21.GtkContainer.t
	R t/22.GtkListStore.t
	R t/23.GtkTreeStore.t
	R t/24.GtkTreeView.t
	R t/25.GtkTreeSelection.t
	R t/26.GtkSimpleMenu.t
	R t/27.GtkClipboard.t
	R t/30.GtkCellRenderer.t
	A t/GdkColor.t
	A t/GdkRegion.t
	A t/GdkWindow.t
	A t/GtkAccelGroup.t
	A t/GtkAccelLabel.t
	A t/GtkAccelMap.t
	A t/GtkAdjustment.t
	A t/GtkAlignment.t
	A t/GtkArrow.t
	A t/GtkAspectFrame.t
	A t/GtkBin.t
	A t/GtkBox.t
	A t/GtkButton.t
	A t/GtkButtonBox.t
	A t/GtkCalendar.t
	A t/GtkCellRenderer.t
	A t/GtkCheckButton.t
	A t/GtkCheckMenuItem.t